--- a/css/index.css
+++ b/css/index.css
@@ -7,8 +7,10 @@ article{
     align-items: center;
     flex-wrap: wrap;
 }
-
-.intro_video video{
+.intro_video{
+    width: 55%;
+}
+.intro_video iframe{
     width: 100%;
     height: 22.5rem;
     /* border: 2px solid black; */
